--- a/src/css/main.css
+++ b/src/css/main.css
@@ -414,7 +414,15 @@ p {
   .hero__hi {
     margin-top: 4em;
     width: 9.5em;
-    margin-bottom: -28px;
+    margin-bottom: -19px;
+  }
+}
+
+@media (min-width: 1250px) {
+  .hero__hi {
+    margin-top: 4.4em;
+    width: 9.5em;
+    margin-bottom: -23px;
   }
 }
 
@@ -426,6 +434,30 @@ p {
   -webkit-animation: nameAnim .9s forwards 0s ease-in-out;
           animation: nameAnim .9s forwards 0s ease-in-out;
   text-shadow: 1px 1px 3px #eee6e6;
+}
+
+@media (min-width: 750px) {
+  .hero__name {
+    font-size: 3em;
+  }
+}
+
+@media (min-width: 900px) {
+  .hero__name {
+    font-size: 2.8em;
+  }
+}
+
+@media (min-width: 1000px) {
+  .hero__name {
+    font-size: 3.37em;
+  }
+}
+
+@media (min-width: 1250px) {
+  .hero__name {
+    font-size: 4em;
+  }
 }
 
 .hero__name:before {
@@ -468,15 +500,11 @@ p {
   }
 }
 
-@media (min-width: 750px) {
-  .hero__name {
-    font-size: 3em;
-  }
-}
-
-@media (min-width: 1000px) {
-  .hero__name {
-    font-size: 3.5em;
+@media (min-width: 1250px) {
+  .hero__name:before {
+    margin-top: 13px;
+    width: 1020px;
+    height: 110px;
   }
 }
 
@@ -509,6 +537,12 @@ p {
 @media (min-width: 1000px) {
   .hero__desc {
     font-size: .63em;
+  }
+}
+
+@media (min-width: 1250px) {
+  .hero__desc {
+    font-size: .8em;
   }
 }
 
