--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -187,7 +187,7 @@ p{
     }
 }
 
-.hover{
+.hoverimg{
     animation: hoverAnim 1s infinite 0s ease-in-out;
 
     @include ipad{
@@ -501,7 +501,7 @@ p{
         &--projects{
             background-color: #38437D;
             color: $light-blue;
-            transition: .5s;
+            transition: .2s;
 
             &:hover{
                 background-color: white;
@@ -510,7 +510,7 @@ p{
         }
 
         &--resume{
-            transition: .5s;
+            transition: .2s;
 
             &:hover{
                 background-color: #38437D;
