--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -689,11 +689,14 @@ p{
     &__tile{
         background-color: white;
         padding: .8em;
+        padding-bottom: 1em;
         color: $dark-blue;
         margin-bottom: 2em;
         border-radius: 12px;
         box-shadow: 0 -2px 10px darken($dark-blue, 10%);
         display: block;
+        position: relative;
+        cursor: pointer;
 
         @include ipad{
             margin: .5em;
@@ -728,6 +731,58 @@ p{
             margin: 0;
         }
 
+        &--repo{
+            visibility: hidden;
+            position: relative;
+
+            &:before{
+                content: "Repository";
+                visibility: visible;
+                position: absolute;
+                padding: .5em;
+                top: 0;
+                left: -3px;
+                width: 100%;
+                // margin: 10px;
+                background-color: $dark-blue;
+                color: $yellow;
+                font-size: .8em;
+                line-height: 1em;
+                border-radius: 20px;
+            }
+            
+
+            @include web1{
+                &:before{
+                    content: "";
+                    visibility: hidden;
+                }
+                visibility: visible;
+                color: $dark-blue;
+                font-size: 2em;
+                border-radius: 12px;
+                line-height: .7em;
+                padding: 75% 0 0;
+                transition: all .2s ease-out;
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                z-index: 2;
+                opacity: 0;                     
+
+                span{
+                    color: $yellow;
+                }
+                &:hover{
+                    opacity: 1;
+                    background-color: rgba(255,255,255, .9);
+
+                }
+            }
+        }
+
         p{
             font-size: .65em;
             margin: 0 10px;
@@ -752,7 +807,8 @@ p{
                 background-image: url(../imgs/electroknight.png);
                 background-size: contain;
                 background-repeat: no-repeat;
-                color: wheat;
+                z-index: 5;
+
 
                 -webkit-filter: drop-shadow(5px 5px 5px #222);
                 filter: drop-shadow(2px 2px 2px #222);
@@ -773,7 +829,7 @@ p{
                 background-image: url(../imgs/Clogo.png);
                 background-size: contain;
                 background-repeat: no-repeat;
-                color: wheat;
+                z-index: 5;
 
                 -webkit-filter: drop-shadow(5px 5px 5px #222);
                 filter: drop-shadow(2px 2px 2px #222);
@@ -786,16 +842,17 @@ p{
             &:before{
                 content: "";
                 position: absolute;
-                // left: 19px;
-                margin-left: -160px;
                 margin-top: -30px;
                 padding: 10px;
-                width: 80px;
-                height: 80px;
+                top: 20px;
+                left: 0;
+                padding: 10px;
+                width: 75px;
+                height: 75px;
                 background-image: url(../imgs/giologo.PNG);
                 background-size: contain;
                 background-repeat: no-repeat;
-                color: wheat;
+                z-index: 5;
 
                 -webkit-filter: drop-shadow(5px 5px 5px #222);
                 filter: drop-shadow(2px 2px 2px #222);
@@ -809,10 +866,8 @@ p{
             .adobexd{
                 color: #FF26BE;
             }
-        }
 
-        &:last-child{
-            margin-bottom: 0;
+            
         }
     }
 }
