--- a/src/css/main.css
+++ b/src/css/main.css
@@ -909,7 +909,7 @@ p {
   content: "";
   position: absolute;
   margin-top: -40px;
-  margin-left: -70px;
+  left: 5px;
   width: 120px;
   height: 120px;
   background-image: url(../imgs/electroknight.png);
@@ -924,7 +924,7 @@ p {
   content: "";
   position: absolute;
   margin-top: -40px;
-  margin-left: -60px;
+  left: 5px;
   padding: 10px;
   width: 95px;
   height: 95px;
@@ -942,7 +942,7 @@ p {
   margin-top: -30px;
   padding: 10px;
   top: 20px;
-  left: 0;
+  left: 5px;
   padding: 10px;
   width: 75px;
   height: 75px;
